--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Aviel's Personal Site</title>
+
+  <style>
+    body {
+
+      background-color: #CFFFDC;
+
+    }
+  </style>
 </head>
 
 <body>
@@ -36,7 +44,7 @@
     <tbody>
       <tr>
         <td>2019 - Current</td>
-        <td>CGI - Consulting Director</td>
+        <td>Consulting Director</td>
       </tr>
       <tr>
         <td>2008 - 2018</td>
